--- a/全部接口.md
+++ b/全部接口.md
@@ -5460,6 +5460,969 @@
 ```
 
 
+# 日志管理
+
+
+## 获取日志列表
+
+
+**接口地址**:`/api/admin/logs`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>获取应用运行日志，支持按级别过滤和数量限制</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|level|日志级别过滤 (DEBUG/INFO/WARN/ERROR)|query|false|string||
+|limit|返回最近N条日志，默认500|query|false|integer(int32)||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ApiResponseLogQueryVO|
+|403|权限不足|ApiResponseLogQueryVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||LogQueryVO|LogQueryVO|
+|&emsp;&emsp;totalCount|日志总数|integer(int32)||
+|&emsp;&emsp;returnedCount|返回的日志数|integer(int32)||
+|&emsp;&emsp;latestId|最新日志ID（用于增量查询）|integer(int64)||
+|&emsp;&emsp;logs|日志列表|array|LogEntryVO|
+|&emsp;&emsp;&emsp;&emsp;id|日志ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;timestamp|时间戳|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;level|日志级别|string||
+|&emsp;&emsp;&emsp;&emsp;threadName|线程名|string||
+|&emsp;&emsp;&emsp;&emsp;loggerName|Logger名称|string||
+|&emsp;&emsp;&emsp;&emsp;message|日志消息|string||
+|&emsp;&emsp;&emsp;&emsp;stackTrace|异常堆栈（如果有）|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"totalCount": 0,
+		"returnedCount": 0,
+		"latestId": 0,
+		"logs": [
+			{
+				"id": 0,
+				"timestamp": "",
+				"level": "INFO",
+				"threadName": "",
+				"loggerName": "",
+				"message": "",
+				"stackTrace": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||LogQueryVO|LogQueryVO|
+|&emsp;&emsp;totalCount|日志总数|integer(int32)||
+|&emsp;&emsp;returnedCount|返回的日志数|integer(int32)||
+|&emsp;&emsp;latestId|最新日志ID（用于增量查询）|integer(int64)||
+|&emsp;&emsp;logs|日志列表|array|LogEntryVO|
+|&emsp;&emsp;&emsp;&emsp;id|日志ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;timestamp|时间戳|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;level|日志级别|string||
+|&emsp;&emsp;&emsp;&emsp;threadName|线程名|string||
+|&emsp;&emsp;&emsp;&emsp;loggerName|Logger名称|string||
+|&emsp;&emsp;&emsp;&emsp;message|日志消息|string||
+|&emsp;&emsp;&emsp;&emsp;stackTrace|异常堆栈（如果有）|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"totalCount": 0,
+		"returnedCount": 0,
+		"latestId": 0,
+		"logs": [
+			{
+				"id": 0,
+				"timestamp": "",
+				"level": "INFO",
+				"threadName": "",
+				"loggerName": "",
+				"message": "",
+				"stackTrace": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 清空日志
+
+
+**接口地址**:`/api/admin/logs`
+
+
+**请求方式**:`DELETE`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>清空内存中的所有日志</p>
+
+
+
+**请求参数**:
+
+
+暂无
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|清空成功|ApiResponseVoid|
+|403|权限不足|ApiResponseVoid|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data|响应数据|object||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data|响应数据|object||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 增量获取日志
+
+
+**接口地址**:`/api/admin/logs/poll`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>获取指定ID之后的新日志，用于前端轮询</p>
+
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|afterId|上次获取的最新日志ID，返回此ID之后的日志|query|false|integer(int64)||
+|level|日志级别过滤 (DEBUG/INFO/WARN/ERROR)|query|false|string||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ApiResponseLogQueryVO|
+|403|权限不足|ApiResponseLogQueryVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||LogQueryVO|LogQueryVO|
+|&emsp;&emsp;totalCount|日志总数|integer(int32)||
+|&emsp;&emsp;returnedCount|返回的日志数|integer(int32)||
+|&emsp;&emsp;latestId|最新日志ID（用于增量查询）|integer(int64)||
+|&emsp;&emsp;logs|日志列表|array|LogEntryVO|
+|&emsp;&emsp;&emsp;&emsp;id|日志ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;timestamp|时间戳|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;level|日志级别|string||
+|&emsp;&emsp;&emsp;&emsp;threadName|线程名|string||
+|&emsp;&emsp;&emsp;&emsp;loggerName|Logger名称|string||
+|&emsp;&emsp;&emsp;&emsp;message|日志消息|string||
+|&emsp;&emsp;&emsp;&emsp;stackTrace|异常堆栈（如果有）|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"totalCount": 0,
+		"returnedCount": 0,
+		"latestId": 0,
+		"logs": [
+			{
+				"id": 0,
+				"timestamp": "",
+				"level": "INFO",
+				"threadName": "",
+				"loggerName": "",
+				"message": "",
+				"stackTrace": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||LogQueryVO|LogQueryVO|
+|&emsp;&emsp;totalCount|日志总数|integer(int32)||
+|&emsp;&emsp;returnedCount|返回的日志数|integer(int32)||
+|&emsp;&emsp;latestId|最新日志ID（用于增量查询）|integer(int64)||
+|&emsp;&emsp;logs|日志列表|array|LogEntryVO|
+|&emsp;&emsp;&emsp;&emsp;id|日志ID|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;timestamp|时间戳|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;level|日志级别|string||
+|&emsp;&emsp;&emsp;&emsp;threadName|线程名|string||
+|&emsp;&emsp;&emsp;&emsp;loggerName|Logger名称|string||
+|&emsp;&emsp;&emsp;&emsp;message|日志消息|string||
+|&emsp;&emsp;&emsp;&emsp;stackTrace|异常堆栈（如果有）|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"totalCount": 0,
+		"returnedCount": 0,
+		"latestId": 0,
+		"logs": [
+			{
+				"id": 0,
+				"timestamp": "",
+				"level": "INFO",
+				"threadName": "",
+				"loggerName": "",
+				"message": "",
+				"stackTrace": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 测试日志记录
+
+
+**接口地址**:`/api/admin/logs/test`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>生成测试日志条目</p>
+
+
+
+**请求参数**:
+
+
+暂无
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|OK|ApiResponseString|
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data|响应数据|string||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": "",
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+# 数据库备份管理
+
+
+## 获取数据库备份信息
+
+
+**接口地址**:`/api/admin/database/backup`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>获取数据库的详细信息，包括表结构、数据量、大小等（不执行备份）</p>
+
+
+
+**请求参数**:
+
+
+暂无
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ApiResponseDatabaseBackupVO|
+|401|未登录|ApiResponseDatabaseBackupVO|
+|403|权限不足，仅组织者可访问|ApiResponseDatabaseBackupVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DatabaseBackupVO|DatabaseBackupVO|
+|&emsp;&emsp;databaseName|数据库名称|string||
+|&emsp;&emsp;databaseVersion|数据库版本|string||
+|&emsp;&emsp;databaseSizeBytes|数据库大小（字节）|integer(int64)||
+|&emsp;&emsp;databaseSizeFormatted|数据库大小（可读格式）|string||
+|&emsp;&emsp;tableCount|表数量|integer(int32)||
+|&emsp;&emsp;totalRecords|总记录数|integer(int64)||
+|&emsp;&emsp;backupFileUrl|备份文件URL（上传到R2后返回）|string||
+|&emsp;&emsp;backupTime|备份生成时间|string(date-time)||
+|&emsp;&emsp;tables|表详细信息|array|TableInfo|
+|&emsp;&emsp;&emsp;&emsp;tableName|表名|string||
+|&emsp;&emsp;&emsp;&emsp;tableComment|表注释|string||
+|&emsp;&emsp;&emsp;&emsp;rowCount|记录数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeBytes|数据大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeFormatted|数据大小（可读格式）|string||
+|&emsp;&emsp;&emsp;&emsp;indexSizeBytes|索引大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;createTime|创建时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;updateTime|最后更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"databaseName": "wic_edu_kg",
+		"databaseVersion": "8.0.33",
+		"databaseSizeBytes": 0,
+		"databaseSizeFormatted": "128.5 MB",
+		"tableCount": 0,
+		"totalRecords": 0,
+		"backupFileUrl": "",
+		"backupTime": "",
+		"tables": [
+			{
+				"tableName": "",
+				"tableComment": "",
+				"rowCount": 0,
+				"dataSizeBytes": 0,
+				"dataSizeFormatted": "",
+				"indexSizeBytes": 0,
+				"createTime": "",
+				"updateTime": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-401**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DatabaseBackupVO|DatabaseBackupVO|
+|&emsp;&emsp;databaseName|数据库名称|string||
+|&emsp;&emsp;databaseVersion|数据库版本|string||
+|&emsp;&emsp;databaseSizeBytes|数据库大小（字节）|integer(int64)||
+|&emsp;&emsp;databaseSizeFormatted|数据库大小（可读格式）|string||
+|&emsp;&emsp;tableCount|表数量|integer(int32)||
+|&emsp;&emsp;totalRecords|总记录数|integer(int64)||
+|&emsp;&emsp;backupFileUrl|备份文件URL（上传到R2后返回）|string||
+|&emsp;&emsp;backupTime|备份生成时间|string(date-time)||
+|&emsp;&emsp;tables|表详细信息|array|TableInfo|
+|&emsp;&emsp;&emsp;&emsp;tableName|表名|string||
+|&emsp;&emsp;&emsp;&emsp;tableComment|表注释|string||
+|&emsp;&emsp;&emsp;&emsp;rowCount|记录数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeBytes|数据大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeFormatted|数据大小（可读格式）|string||
+|&emsp;&emsp;&emsp;&emsp;indexSizeBytes|索引大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;createTime|创建时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;updateTime|最后更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"databaseName": "wic_edu_kg",
+		"databaseVersion": "8.0.33",
+		"databaseSizeBytes": 0,
+		"databaseSizeFormatted": "128.5 MB",
+		"tableCount": 0,
+		"totalRecords": 0,
+		"backupFileUrl": "",
+		"backupTime": "",
+		"tables": [
+			{
+				"tableName": "",
+				"tableComment": "",
+				"rowCount": 0,
+				"dataSizeBytes": 0,
+				"dataSizeFormatted": "",
+				"indexSizeBytes": 0,
+				"createTime": "",
+				"updateTime": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DatabaseBackupVO|DatabaseBackupVO|
+|&emsp;&emsp;databaseName|数据库名称|string||
+|&emsp;&emsp;databaseVersion|数据库版本|string||
+|&emsp;&emsp;databaseSizeBytes|数据库大小（字节）|integer(int64)||
+|&emsp;&emsp;databaseSizeFormatted|数据库大小（可读格式）|string||
+|&emsp;&emsp;tableCount|表数量|integer(int32)||
+|&emsp;&emsp;totalRecords|总记录数|integer(int64)||
+|&emsp;&emsp;backupFileUrl|备份文件URL（上传到R2后返回）|string||
+|&emsp;&emsp;backupTime|备份生成时间|string(date-time)||
+|&emsp;&emsp;tables|表详细信息|array|TableInfo|
+|&emsp;&emsp;&emsp;&emsp;tableName|表名|string||
+|&emsp;&emsp;&emsp;&emsp;tableComment|表注释|string||
+|&emsp;&emsp;&emsp;&emsp;rowCount|记录数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeBytes|数据大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeFormatted|数据大小（可读格式）|string||
+|&emsp;&emsp;&emsp;&emsp;indexSizeBytes|索引大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;createTime|创建时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;updateTime|最后更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"databaseName": "wic_edu_kg",
+		"databaseVersion": "8.0.33",
+		"databaseSizeBytes": 0,
+		"databaseSizeFormatted": "128.5 MB",
+		"tableCount": 0,
+		"totalRecords": 0,
+		"backupFileUrl": "",
+		"backupTime": "",
+		"tables": [
+			{
+				"tableName": "",
+				"tableComment": "",
+				"rowCount": 0,
+				"dataSizeBytes": 0,
+				"dataSizeFormatted": "",
+				"indexSizeBytes": 0,
+				"createTime": "",
+				"updateTime": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 执行数据库备份
+
+
+**接口地址**:`/api/admin/database/backup`
+
+
+**请求方式**:`POST`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>执行数据库备份并上传到R2云存储的/db文件夹，返回备份文件URL</p>
+
+
+
+**请求参数**:
+
+
+暂无
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|备份成功|ApiResponseDatabaseBackupVO|
+|401|未登录|ApiResponseDatabaseBackupVO|
+|403|权限不足，仅组织者可访问|ApiResponseDatabaseBackupVO|
+|500|备份失败|ApiResponseDatabaseBackupVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DatabaseBackupVO|DatabaseBackupVO|
+|&emsp;&emsp;databaseName|数据库名称|string||
+|&emsp;&emsp;databaseVersion|数据库版本|string||
+|&emsp;&emsp;databaseSizeBytes|数据库大小（字节）|integer(int64)||
+|&emsp;&emsp;databaseSizeFormatted|数据库大小（可读格式）|string||
+|&emsp;&emsp;tableCount|表数量|integer(int32)||
+|&emsp;&emsp;totalRecords|总记录数|integer(int64)||
+|&emsp;&emsp;backupFileUrl|备份文件URL（上传到R2后返回）|string||
+|&emsp;&emsp;backupTime|备份生成时间|string(date-time)||
+|&emsp;&emsp;tables|表详细信息|array|TableInfo|
+|&emsp;&emsp;&emsp;&emsp;tableName|表名|string||
+|&emsp;&emsp;&emsp;&emsp;tableComment|表注释|string||
+|&emsp;&emsp;&emsp;&emsp;rowCount|记录数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeBytes|数据大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeFormatted|数据大小（可读格式）|string||
+|&emsp;&emsp;&emsp;&emsp;indexSizeBytes|索引大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;createTime|创建时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;updateTime|最后更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"databaseName": "wic_edu_kg",
+		"databaseVersion": "8.0.33",
+		"databaseSizeBytes": 0,
+		"databaseSizeFormatted": "128.5 MB",
+		"tableCount": 0,
+		"totalRecords": 0,
+		"backupFileUrl": "",
+		"backupTime": "",
+		"tables": [
+			{
+				"tableName": "",
+				"tableComment": "",
+				"rowCount": 0,
+				"dataSizeBytes": 0,
+				"dataSizeFormatted": "",
+				"indexSizeBytes": 0,
+				"createTime": "",
+				"updateTime": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-401**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DatabaseBackupVO|DatabaseBackupVO|
+|&emsp;&emsp;databaseName|数据库名称|string||
+|&emsp;&emsp;databaseVersion|数据库版本|string||
+|&emsp;&emsp;databaseSizeBytes|数据库大小（字节）|integer(int64)||
+|&emsp;&emsp;databaseSizeFormatted|数据库大小（可读格式）|string||
+|&emsp;&emsp;tableCount|表数量|integer(int32)||
+|&emsp;&emsp;totalRecords|总记录数|integer(int64)||
+|&emsp;&emsp;backupFileUrl|备份文件URL（上传到R2后返回）|string||
+|&emsp;&emsp;backupTime|备份生成时间|string(date-time)||
+|&emsp;&emsp;tables|表详细信息|array|TableInfo|
+|&emsp;&emsp;&emsp;&emsp;tableName|表名|string||
+|&emsp;&emsp;&emsp;&emsp;tableComment|表注释|string||
+|&emsp;&emsp;&emsp;&emsp;rowCount|记录数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeBytes|数据大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeFormatted|数据大小（可读格式）|string||
+|&emsp;&emsp;&emsp;&emsp;indexSizeBytes|索引大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;createTime|创建时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;updateTime|最后更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"databaseName": "wic_edu_kg",
+		"databaseVersion": "8.0.33",
+		"databaseSizeBytes": 0,
+		"databaseSizeFormatted": "128.5 MB",
+		"tableCount": 0,
+		"totalRecords": 0,
+		"backupFileUrl": "",
+		"backupTime": "",
+		"tables": [
+			{
+				"tableName": "",
+				"tableComment": "",
+				"rowCount": 0,
+				"dataSizeBytes": 0,
+				"dataSizeFormatted": "",
+				"indexSizeBytes": 0,
+				"createTime": "",
+				"updateTime": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DatabaseBackupVO|DatabaseBackupVO|
+|&emsp;&emsp;databaseName|数据库名称|string||
+|&emsp;&emsp;databaseVersion|数据库版本|string||
+|&emsp;&emsp;databaseSizeBytes|数据库大小（字节）|integer(int64)||
+|&emsp;&emsp;databaseSizeFormatted|数据库大小（可读格式）|string||
+|&emsp;&emsp;tableCount|表数量|integer(int32)||
+|&emsp;&emsp;totalRecords|总记录数|integer(int64)||
+|&emsp;&emsp;backupFileUrl|备份文件URL（上传到R2后返回）|string||
+|&emsp;&emsp;backupTime|备份生成时间|string(date-time)||
+|&emsp;&emsp;tables|表详细信息|array|TableInfo|
+|&emsp;&emsp;&emsp;&emsp;tableName|表名|string||
+|&emsp;&emsp;&emsp;&emsp;tableComment|表注释|string||
+|&emsp;&emsp;&emsp;&emsp;rowCount|记录数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeBytes|数据大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeFormatted|数据大小（可读格式）|string||
+|&emsp;&emsp;&emsp;&emsp;indexSizeBytes|索引大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;createTime|创建时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;updateTime|最后更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"databaseName": "wic_edu_kg",
+		"databaseVersion": "8.0.33",
+		"databaseSizeBytes": 0,
+		"databaseSizeFormatted": "128.5 MB",
+		"tableCount": 0,
+		"totalRecords": 0,
+		"backupFileUrl": "",
+		"backupTime": "",
+		"tables": [
+			{
+				"tableName": "",
+				"tableComment": "",
+				"rowCount": 0,
+				"dataSizeBytes": 0,
+				"dataSizeFormatted": "",
+				"indexSizeBytes": 0,
+				"createTime": "",
+				"updateTime": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-500**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||DatabaseBackupVO|DatabaseBackupVO|
+|&emsp;&emsp;databaseName|数据库名称|string||
+|&emsp;&emsp;databaseVersion|数据库版本|string||
+|&emsp;&emsp;databaseSizeBytes|数据库大小（字节）|integer(int64)||
+|&emsp;&emsp;databaseSizeFormatted|数据库大小（可读格式）|string||
+|&emsp;&emsp;tableCount|表数量|integer(int32)||
+|&emsp;&emsp;totalRecords|总记录数|integer(int64)||
+|&emsp;&emsp;backupFileUrl|备份文件URL（上传到R2后返回）|string||
+|&emsp;&emsp;backupTime|备份生成时间|string(date-time)||
+|&emsp;&emsp;tables|表详细信息|array|TableInfo|
+|&emsp;&emsp;&emsp;&emsp;tableName|表名|string||
+|&emsp;&emsp;&emsp;&emsp;tableComment|表注释|string||
+|&emsp;&emsp;&emsp;&emsp;rowCount|记录数|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeBytes|数据大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;dataSizeFormatted|数据大小（可读格式）|string||
+|&emsp;&emsp;&emsp;&emsp;indexSizeBytes|索引大小（字节）|integer(int64)||
+|&emsp;&emsp;&emsp;&emsp;createTime|创建时间|string(date-time)||
+|&emsp;&emsp;&emsp;&emsp;updateTime|最后更新时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"databaseName": "wic_edu_kg",
+		"databaseVersion": "8.0.33",
+		"databaseSizeBytes": 0,
+		"databaseSizeFormatted": "128.5 MB",
+		"tableCount": 0,
+		"totalRecords": 0,
+		"backupFileUrl": "",
+		"backupTime": "",
+		"tables": [
+			{
+				"tableName": "",
+				"tableComment": "",
+				"rowCount": 0,
+				"dataSizeBytes": 0,
+				"dataSizeFormatted": "",
+				"indexSizeBytes": 0,
+				"createTime": "",
+				"updateTime": ""
+			}
+		]
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
 # 图片资源
 
 
@@ -6552,6 +7515,220 @@
 		"maxLimit": 0,
 		"countId": "",
 		"pages": 0
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+# 系统配置
+
+
+## 获取系统配置
+
+
+**接口地址**:`/api/admin/config`
+
+
+**请求方式**:`GET`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>获取当前系统配置状态</p>
+
+
+
+**请求参数**:
+
+
+暂无
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|获取成功|ApiResponseSysConfigVO|
+|403|权限不足|ApiResponseSysConfigVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||SysConfigVO|SysConfigVO|
+|&emsp;&emsp;maintenanceMode|维护模式|boolean||
+|&emsp;&emsp;openRegistration|开放注册|boolean||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"maintenanceMode": false,
+		"openRegistration": true
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||SysConfigVO|SysConfigVO|
+|&emsp;&emsp;maintenanceMode|维护模式|boolean||
+|&emsp;&emsp;openRegistration|开放注册|boolean||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"maintenanceMode": false,
+		"openRegistration": true
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+## 更新系统配置
+
+
+**接口地址**:`/api/admin/config`
+
+
+**请求方式**:`PUT`
+
+
+**请求数据类型**:`application/x-www-form-urlencoded,application/json`
+
+
+**响应数据类型**:`*/*`
+
+
+**接口描述**:<p>更新系统配置</p>
+
+
+
+**请求示例**:
+
+
+```javascript
+{
+  "maintenanceMode": false,
+  "openRegistration": true
+}
+```
+
+
+**请求参数**:
+
+
+| 参数名称 | 参数说明 | 请求类型    | 是否必须 | 数据类型 | schema |
+| -------- | -------- | ----- | -------- | -------- | ------ |
+|sysConfigVO|系统配置|body|true|SysConfigVO|SysConfigVO|
+|&emsp;&emsp;maintenanceMode|维护模式||false|boolean||
+|&emsp;&emsp;openRegistration|开放注册||false|boolean||
+
+
+**响应状态**:
+
+
+| 状态码 | 说明 | schema |
+| -------- | -------- | ----- | 
+|200|更新成功|ApiResponseSysConfigVO|
+|403|权限不足|ApiResponseSysConfigVO|
+
+
+**响应状态码-200**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||SysConfigVO|SysConfigVO|
+|&emsp;&emsp;maintenanceMode|维护模式|boolean||
+|&emsp;&emsp;openRegistration|开放注册|boolean||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"maintenanceMode": false,
+		"openRegistration": true
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||SysConfigVO|SysConfigVO|
+|&emsp;&emsp;maintenanceMode|维护模式|boolean||
+|&emsp;&emsp;openRegistration|开放注册|boolean||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"maintenanceMode": false,
+		"openRegistration": true
 	},
 	"error": "VALIDATION_ERROR",
 	"message": "邮箱格式不正确",
@@ -8789,6 +9966,7 @@
 | -------- | -------- | ----- | 
 |201|注册成功，激活邮件已发送|UserVO|
 |400|请求参数错误|ApiResponseUserVO|
+|403|注册功能已关闭|ApiResponseUserVO|
 |409|学号/用户名/邮箱已存在|ApiResponseUserVO|
 
 
@@ -8836,6 +10014,60 @@
 
 
 **响应状态码-400**:
+
+
+**响应参数**:
+
+
+| 参数名称 | 参数说明 | 类型 | schema |
+| -------- | -------- | ----- |----- | 
+|data||UserVO|UserVO|
+|&emsp;&emsp;id|用户ID|integer(int64)||
+|&emsp;&emsp;studentId|学号|string||
+|&emsp;&emsp;username|用户名|string||
+|&emsp;&emsp;name|姓名|string||
+|&emsp;&emsp;email|邮箱|string||
+|&emsp;&emsp;avatar|头像URL|string||
+|&emsp;&emsp;department|院系|string||
+|&emsp;&emsp;major|专业|string||
+|&emsp;&emsp;bio|个人简介|string||
+|&emsp;&emsp;status|状态: 0-未激活, 1-正常, 2-禁用|integer(int32)||
+|&emsp;&emsp;role|角色: 1-组织者, 2-管理员, 3-普通用户|integer(int32)||
+|&emsp;&emsp;roleName|角色名称|string||
+|&emsp;&emsp;createdAt|注册时间|string(date-time)||
+|error|错误码（仅错误时返回）|string||
+|message|错误消息（仅错误时返回）|string||
+|path|请求路径（仅错误时返回）|string||
+|timestamp|时间戳（仅错误时返回）|string(date-time)|string(date-time)|
+
+
+**响应示例**:
+```javascript
+{
+	"data": {
+		"id": 0,
+		"studentId": "",
+		"username": "",
+		"name": "",
+		"email": "",
+		"avatar": "",
+		"department": "",
+		"major": "",
+		"bio": "",
+		"status": 0,
+		"role": 0,
+		"roleName": "",
+		"createdAt": ""
+	},
+	"error": "VALIDATION_ERROR",
+	"message": "邮箱格式不正确",
+	"path": "/api/users",
+	"timestamp": ""
+}
+```
+
+
+**响应状态码-403**:
 
 
 **响应参数**:
